# zima-storage-manager

./: .dockerignore  .env.example  .gitattributes  .gitignore  APPLICA-AGGIORNAMENTO.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  config.example.json  docker-compose.yml  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  docker-publish.yml
docs/: ARCHITECTURE.md  DOCKER.md  INSTALL.md  SAFETY.md  TROUBLESHOOTING.md  USER_GUIDE.md  ZIMAOS_APPSTORE.md
scripts/: check-version.py  install-zimaos.sh  update-zimaos.sh
tests/: test_audit.py  test_config.py  test_database.py  test_history.py  test_manager.py  test_system.py
zsm/: __init__.py  cli.py  config.py  constants.py  models.py  web.py
zsm/core/: audit.py  database.py  history.py  logging_setup.py  manager.py  runner.py  system.py
zsm/gui/: app.py
zsm/reports/: generator.py
