[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zima-storage-manager"
version = "1.0.0"
description = "GUI and CLI administration toolkit for ZimaOS storage metadata, backups and diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Alex Lignola"}]
dependencies = ["customtkinter>=5.2.2"]
keywords = ["zimaos", "storage", "sqlite", "disk", "administration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: X11 Applications",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
zsm = "zsm.cli:main"
zsm-gui = "zsm.gui.app:main"

[tool.setuptools.packages.find]
include = ["zsm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E401", "E701", "E702", "E703", "F401", "F841"]
