[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zima-storage-manager"
version = "3.0.0-rc10"
description = "A simple and safe web interface for renaming ZimaOS disk mount names."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Alex Lignola"}]
dependencies = []
keywords = ["zimaos", "storage", "sqlite", "disk", "administration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2.2"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
zsm = "zsm.cli:main"
zsm-web = "zsm.web:main"
zsm-gui = "zsm.gui.app:main"

[tool.setuptools.packages.find]
include = ["zsm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E401", "E701", "E702", "E703", "F401", "F841"]
